--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "curl": "^0.1.4",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.16"
   }
 }
