--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   api:
-    container_name: "api-app"
+    container_name: 'api-app'
     ports:
       - 4000:4000
     environment:
@@ -13,7 +13,7 @@ services:
     build: .
     image: artjob-api
   db:
-    container_name: "api-db"
+    container_name: 'api-db'
     ports:
       - 5432:5432
     environment:
