Done: Update user - Upload portafolio from artist user - Add middleware to delete the previous portafolio image - Update user instance - Fix user serializer updating portafolio attribute

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "AERM2018 <retana.martinez.angel.eduardo@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts":{
+	  "dev":"nodemon"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
